# advect

./: .gitignore  README.md  pyproject.toml
.workstream-plans/: 2026-06-21-59599f00cb-advect-robustness-error-handling-rollback-ssh-preflight.md
src/advect/: cli.py  core.py  remote.py
src/advect/skill/: SKILL.md
tests/: test_core.py
